# decentralized_decision_vote

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
clients/cli/: Cargo.toml
clients/cli/src/: client.rs  commands.rs  config.rs  main.rs
clients/sdk/javascript/: README.md  package.json
clients/sdk/javascript/src/: client.ts  crypto.ts  index.ts  types.ts
clients/sdk/python/: README.md  pyproject.toml
clients/sdk/python/src/luckee_dao_vote_sdk/: __init__.py  client.py  crypto.py  types.py
clients/sdk/rust/: Cargo.toml
clients/sdk/rust/src/: lib.rs
core/commitment-engine/: Cargo.toml
core/commitment-engine/src/: algorithms.rs  engine.rs  lib.rs  validators.rs
core/commitment-engine/tests/: commitment_tests.rs
core/template-system/: Cargo.toml
core/template-system/src/: lib.rs  registry.rs  templates.rs  validators.rs
core/template-system/tests/: template_tests.rs
core/vote-engine/: Cargo.toml
core/vote-engine/src/: engine.rs  lib.rs  models.rs  services.rs  validators.rs
core/vote-engine/tests/: vote_engine_tests.rs
infrastructure/: docker-compose.monitoring.yml
infrastructure/docker/: Dockerfile.admin-api  Dockerfile.notification-service  Dockerfile.vote-api  docker-compose.dev.yml  docker-compose.yml  nginx.conf
infrastructure/k8s/: configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  vote-api.yaml
infrastructure/logging/elasticsearch/: elasticsearch.yml
infrastructure/logging/filebeat/: filebeat.yml
infrastructure/logging/kibana/: kibana.yml
infrastructure/logging/logstash/: logstash.conf
infrastructure/logging/logstash/templates/: ddv-logs.json
infrastructure/monitoring/: alertmanager.yml  prometheus.yml
infrastructure/monitoring/grafana/dashboards/: ddv-overview.json
infrastructure/monitoring/rules/: ddv-alerts.yml
infrastructure/scripts/: backup.sh  build.sh  deploy.sh  test.sh
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/tracing/jaeger/: jaeger.yml
service/: Cargo.toml  Dockerfile  config.yaml
service/src/: lib.rs  main.rs
service/src/api/: routes.rs
service/src/cli/: mod.rs
service/src/config/: mod.rs
service/src/core/: mod.rs  state.rs  template.rs
service/src/model/: mod.rs  response.rs  vote.rs
service/src/service/: mod.rs
service/src/store/: memory.rs  mod.rs
service/tests/: commitment_tests.rs  integration_tests.rs
services/admin-api/: Cargo.toml
services/admin-api/src/: auth.rs  config.rs  handlers.rs  lib.rs  main.rs  middleware.rs  permissions.rs  service.rs
services/notification-service/: Cargo.toml
services/notification-service/src/: config.rs  events.rs  handlers.rs  lib.rs  main.rs  providers.rs  service.rs  websocket.rs
services/vote-api/: Cargo.toml
services/vote-api/src/: handlers.rs  main.rs  middleware.rs  routes.rs  state.rs
shared/config/: Cargo.toml
shared/config/src/: blockchain.rs  database.rs  lib.rs  logging.rs  server.rs
shared/logging/: Cargo.toml
shared/logging/src/: lib.rs
shared/types/: Cargo.toml
shared/types/src/: api.rs  errors.rs  lib.rs  vote.rs
shared/types/tests/: types_tests.rs
shared/utils/: Cargo.toml
shared/utils/src/: crypto.rs  lib.rs  serialization.rs  validation.rs
storage/blockchain-store/: CHANGELOG.md  Cargo.toml  README.md
storage/blockchain-store/examples/: config.json  integration.rs  new_blockchains.rs  usage.rs
storage/blockchain-store/src/: archway.rs  avalanche.rs  config.rs  cosmos.rs  error.rs  ethereum.rs  injective.rs  lib.rs  manager.rs  solana.rs  sui.rs  traits.rs
storage/blockchain-store/tests/: integration_tests.rs
storage/config-store/: Cargo.toml
storage/config-store/src/: cache.rs  lib.rs  store.rs  version.rs  watcher.rs
storage/event-store/: Cargo.toml
storage/event-store/src/: index.rs  lib.rs  query.rs  replay.rs  store.rs
storage/vote-store/: Cargo.toml
storage/vote-store/src/: lib.rs  memory.rs  postgres.rs  sqlite.rs  traits.rs
tests/: README.md  run_single_target_tests.sh  test_config.toml
tests/analysis/: test_result_analyzer.rs
tests/e2e/: single_target_e2e_tests.rs
tests/integration/: api_tests.rs  common.rs  single_target_selection_tests.rs  test_types.rs
tests/performance/: load_tests.rs  single_target_performance_tests.rs
