[package]
name = "template-system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Template system for vote value processing and aggregation"

[dependencies]
shared-types = { path = "../../shared/types" }
shared-utils = { path = "../../shared/utils" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
