[package]
name = "vote-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core voting engine for the decentralized decision vote system"

[dependencies]
shared-types = { path = "../../shared/types" }
shared-utils = { path = "../../shared/utils" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
