[package]
name = "admin-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin API service for the decentralized decision vote system"

[dependencies]
shared-types = { path = "../../shared/types" }
shared-config = { path = "../../shared/config" }
shared-logging = { path = "../../shared/logging" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# JWT
jsonwebtoken = "9.2"

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Time
chrono = { workspace = true, features = ["serde"] }

# Password hashing
sha2 = "0.10"

# HTTP
http = "1.0"
